--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "name": "try",
     "version": "1.0.0",
     "description": "",
-    "main": "webpack.config.js",
-    "scripts": {},
+    "scripts": {
+        "build": "webpack"
+    },
     "repository": {
         "type": "git",
         "url": "git"
@@ -11,15 +12,10 @@
     "author": "",
     "license": "ISC",
     "homepage": "",
-    "dependencies": {
+    "devDependencies": {
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.5",
-        "webpack": "^5.68.0"
-    },
-    "devDependencies": {
+        "webpack": "^5.68.0",
         "webpack-cli": "^4.9.2"
-    },
-    "directories": {
-        "lib": "lib"
     }
 }
