--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
+        "outDir": "./dist/",
+        "module": "esnext",
+        "target": "es5",
         "lib": [
             "es2015",
             "dom"
         ],
-        "target": "es5",
-        "noUnusedLocals": true,
+        "noUnusedLocals": true
     }
 }
