--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -1,36 +1,50 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
+name: Generate Changelog
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  workflow_run:
+    workflows: [deployment]
+    types:
+      - completed
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  generate-changelog:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: "production"
+          fetch-depth: 0
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Generate changelog
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          BANNER_INFO=""
+
+          # 取得最後一次 release tag
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+          echo "LAST_TAG: $LAST_TAG"
+
+          if [ -z "$LAST_TAG" ]; then
+            # 沒有 tag 的情況
+            COMMITS_INFO=$(git log --format="%s@%an" | sed 's/@/ @/' | sort -u)
+            CHANGED_FILES=$(git diff --name-only $(git rev-list --max-parents=0 HEAD) HEAD | grep "guoshipartners/static/js/.*\.js$" || true)
+          else
+            # 有 tag 的情況
+            COMMITS_INFO=$(git log ${LAST_TAG}..HEAD --format="%s@%an" | sed 's/@/ @/' | sort -u)
+            CHANGED_FILES=$(git diff --name-only ${LAST_TAG} HEAD | grep "guoshipartners/static/js/.*\.js$" || true)
+          fi
+
+          # 格式化輸出變更檔案的 banner
+          echo -e "\n## Version"
+          echo "\`\`\`"
+          echo "$CHANGED_FILES" | while IFS= read -r file; do
+            if [ -f "$file" ]; then
+              banner=$(head -n 2 "$file" | tail -n 1 | xargs)
+              echo "$banner"
+            fi
+          done
+          echo "\`\`\`"
+
+          # 格式化輸出提交信息
+          echo "## What's Changed"
+          echo "$COMMITS_INFO" | while IFS= read -r line; do
+            echo "* $line"
+          done
