--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -1,9 +1,8 @@
 name: Generate Release Tag
 on:
-  workflow_run:
-    workflows: [deployment]
-    types:
-      - completed
+  push:
+    branches:
+      - main
 jobs:
   generate-changelog:
     runs-on: ubuntu-latest
