--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -12,6 +12,11 @@ jobs:
         with:
           ref: "main"
           fetch-depth: 0
+      - name: Configure Git user as workflow actor
+        run: |
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "${{ github.actor }}"
+
       - name: Generate and push release tag
         run: |
           # Generate new tag
