--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -49,19 +49,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-
-          curl -X POST \
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "Content-Type: application/json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{ github.repository }}/releases \
             -d '{
               "tag_name": "'"$TAG_NAME"'",
               "target_commitish": "main",
-              "name": "Release '"$TAG_NAME"'",
+              "name": "'"$TAG_NAME"'",
               "body": "## What's Changed\n\n'"$CHANGES"'",
               "draft": false,
-              "prerelease": false
-            }' \
-            https://api.github.com/repos/${{ github.repository }}/releases
+              "prerelease": false,
+              "generate_release_notes": false
+            }'
 
       - name: Generate changelog
         run: |
