--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -54,7 +54,8 @@ jobs:
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run:
+        run: |
+          echo "creaate"
 
       - name: Generate changelog
         run: |
