--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -12,7 +12,6 @@ jobs:
         with:
           ref: "main"
           fetch-depth: 0
-
       - name: Configure Git user as workflow actor
         run: |
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
@@ -50,7 +49,23 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "creaate"
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{ github.repository }}/releases \
+            -d '{
+              "tag_name": "'"$TAG_NAME"'",
+              "target_commitish": "main",
+              "name": "'"$TAG_NAME"'",
+              "body": Changes in this Release
+                      - First Change
+                      - Second Change
+              "draft": false,
+              "prerelease": false,
+              "generate_release_notes": false
+            }'
 
       - name: Generate changelog
         run: |
