--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -43,8 +43,8 @@ jobs:
           fi
 
           # Output the variables for use in later steps
-          echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
-          echo "CHANGES=$CHANGES" >> $GITHUB_ENV
+          echo "TAG_NAME=${TAG_NAME}" >> "$GITHUB_ENV"
+          echo "CHANGES=${CHANGES}" >> "$GITHUB_ENV"
 
       - name: Create New Tag
         run: |
