--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -23,6 +23,11 @@ jobs:
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git config --global user.name "${{ github.actor }}"
 
+      - name: Debug GITHUB_ENV
+        run: |
+          echo "GITHUB_ENV path: $GITHUB_ENV"
+          ls -al $(dirname $GITHUB_ENV)
+
       - name: Generate Tag and Release Notes
         id: generate
         run: |
