--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -62,7 +62,7 @@ jobs:
           echo "CHANGES<<EOF" >> "$GITHUB_ENV"
           echo "${CHANGES}" >> "$GITHUB_ENV"
           echo "EOF" >> "$GITHUB_ENV"
-
+          echo "EOF = ${CHANGES}"
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
