--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -23,21 +23,15 @@ jobs:
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git config --global user.name "${{ github.actor }}"
 
-      - name: Get the last tag
-        id: last_tag
+      - name: Generate Tag and Release Notes
+        id: generate
         run: |
           # Get today's date
           TODAY=$(date +"%Y%m%d")
 
-          # Get the last tag
+          # Get tag
           LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "${TODAY}-0")
-
-          # Generate the new tag name
           TAG_NAME=$(echo $LAST_TAG | awk -F'-' -v today=$TODAY '{if ($1 == today) {printf "%s-%d", $1, $2 + 1} else {printf "%s-0", today}}')
-
-      - name: Generate Tag and Release Notes
-        id: generate
-        run: |
 
           # Generate the changelog from commits
           if [ "$LAST_TAG" = "${TODAY}-0" ]; then
