--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -59,4 +59,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release create $TAG_NAME -n "${{ env.CHANGES }}"
+          RELEASE_NOTES="## What's Changed\n${{ env.CHANGES }}"
+          gh release create $TAG_NAME -n "$RELEASE_NOTES"
