--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -59,5 +59,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          RELEASE_NOTES="## What's Changed -e \n${{ env.CHANGES }}"
+          RELEASE_NOTES="## What's Changed \n${{ env.CHANGES }}"
+          echo -e "$RELEASE_NOTES"
           gh release create $TAG_NAME -n "$RELEASE_NOTES"
