--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - production
 jobs:
   generate-changelog:
     runs-on: ubuntu-latest
@@ -49,7 +50,7 @@ jobs:
           echo "EOF" >> "$GITHUB_ENV"
 
           echo "## What's Changed"
-          echo "${CHANGES}"
+          echo -e "${CHANGES}"
       - name: Create New Tag
         run: |
           git tag -a $TAG_NAME -m "Release $TAG_NAME"
@@ -59,6 +60,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          RELEASE_NOTES="## What's Changed \n${{ env.CHANGES }}"
+          RELEASE_NOTES="Version \n ``` mir js 1000-00-00```"
+          RELEASE_NOTES="$RELEASE_NOTES \n\n## What's Changed \n${{ env.CHANGES }}"
           RELEASE_NOTES=$(printf "%b" "$RELEASE_NOTES")
           gh release create $TAG_NAME -n "$RELEASE_NOTES"
