--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -60,7 +60,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          RELEASE_NOTES="Version \n ``` mir js 1000-00-00```"
+          RELEASE_NOTES="Version \n  "\`\`\`" mir js 1000-00-00  "\`\`\`""
           RELEASE_NOTES="$RELEASE_NOTES \n\n## What's Changed \n${{ env.CHANGES }}"
           RELEASE_NOTES=$(printf "%b" "$RELEASE_NOTES")
           gh release create $TAG_NAME -n "$RELEASE_NOTES"
