--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -41,6 +41,7 @@ jobs:
               CHANGES=$(git log --merges ${LAST_TAG}..HEAD --format="%s%n%b" -n 1 | sed '1d' | sed 's/@/ @/')
           fi
 
+          CHANGES=$(echo "$CHANGES" | sed 's/^/- /')
           echo "CHANGES=${CHANGES}"
 
           # Output the variables for use in later steps
