--- a/.github/workflows/createRelease.yml
+++ b/.github/workflows/createRelease.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - main
-      - production
 jobs:
   generate-release-tag:
     runs-on: ubuntu-latest
@@ -32,7 +31,7 @@ jobs:
 
           # Get tag
           LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "${TODAY}-0")
-          TAG_NAME=$(echo $LAST_TAG | awk -F'-' -v today=$TODAY '{if ($1 == today) {printf "%s-%d", $1, $2 + 1} else {printf "%s-0", today}}')
+          TAG_NAME="$(echo $LAST_TAG | awk -F'-' -v today=$TODAY '{if ($1 == today) {printf "%s-%d", $1, $2 + 1} else {printf "%s-0", today}}')$SUFFIX"
 
           # Generate the changelog from commits
           if [ "$LAST_TAG" = "${TODAY}-0" ]; then
@@ -48,6 +47,7 @@ jobs:
           echo "LAST_TAG=${LAST_TAG}"
           echo "TAG_NAME=${TAG_NAME}"
           echo "TAG_NAME=${TAG_NAME}" >> "$GITHUB_ENV"
+          echo "TAG_MAIN=${TAG_NAME}" >> "$GITHUB_ENV"
           echo "CHANGES<<EOF" >> "$GITHUB_ENV"
           echo "${CHANGES}" >> "$GITHUB_ENV"
           echo "EOF" >> "$GITHUB_ENV"
@@ -56,16 +56,26 @@ jobs:
           echo -e "${CHANGES}"
       - name: Create New Tag
         run: |
-          git tag -a $TAG_NAME -m "Release $TAG_NAME"
-          git push origin $TAG_NAME
+
+          git tag -a ${{ env.TAG_PRODUCTION }} -m "Release ${{ env.TAG_PRODUCTION }}"
+          git push origin ${{ env.TAG_PRODUCTION }}
+
+          # Tag for main branch
+          git tag -a ${{ env.TAG_MAIN }} -m "Release ${{ env.TAG_MAIN }}"
+          git push origin ${{ env.TAG_MAIN }}
 
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          RELEASE_NOTES="## Version \n  "\`\`\`"\n * ad-serv.min.js 2024-12-02 3:30:42 PM  \n"\`\`\`""
+          RELEASE_NOTES="## Version\n\`\`\`\n * ad-serv.min.js $(date +"%Y-%m-%d %T")\n\`\`\`"
           RELEASE_NOTES="$RELEASE_NOTES \n\n## What's Changed \n${{ env.CHANGES }}"
           RELEASE_NOTES=$(printf "%b" "$RELEASE_NOTES")
 
           echo -e "$RELEASE_NOTES"
-          gh release create $TAG_NAME -n "$RELEASE_NOTES"
+
+          # Create production release
+          gh release create ${{ env.TAG_PRODUCTION }} -n "$RELEASE_NOTES"
+
+          # Create main release
+          gh release create ${{ env.TAG_MAIN }} -n "$RELEASE_NOTES"
